2003-01-08  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_smtp.py: cleanup timers after test

	* twisted/trial/unittest.py: keep errors that are logged and
	submit them as test failures when tests are finished.

	* twisted/python/log.py: if errors are being kept, don't print
	them

2003-1-8  Moshe Zadka <moshez@twistedmatrix.com>

	* doc/man/trial.1 twisted/scripts/trial.py: Add -l/--logfile argument
	to allow giving a log file.

	* twisted/trial/unittest.py: add SkipTest exception, which tests can
	raise in their various test* method to skip a test which is not
	excpected to pass.

2003-01-08  Jonathan M. Lange  <jml@mumak.net>

	* twisted/trial/*, bin/trial, twisted/scripts/trial.py,
	doc/man/trial.1: Added 'trial', a new unit testing framework for
	Twisted.

	* twisted/test/test_*, admin/runtests: Moved existing tests over to
	trial.

2003-01-06  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/python/microdom.py: Added beExtremelyLenient mode (for
	parsing "tag soup").  While this isn't quite as lenient as Mozilla
	or IE's code (it will, for example, translate
	<div><i><b>foo</i>bar</b></div> to <div><i><b>foo</b></i>bar</div>
	) I am still rather proud of the wide range of complete garbage
	that it will mangle into at least reasonably similar XHTML-esque
	documents.

2003-01-05  Brian Warner  <warner@lothar.com>

	* twisted/internet/cReactor/*, setup.py: Implement getDelayedCalls for
	cReactor. Create cDelayedCall class, implement .cancel(), .reset(),
	and .delay() for them.

2003-01-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/python/components.py: Fix bug due to interaction between
	Componentized subclasses and twisted.python.rebuild.rebuild()

	* twisted/python/reflect.py: Removed backwards compatability hack
	for deprecated name twisted.protocols.telnet.ShellFactory and empty
	oldModules dictionary.

2003-01-02  Brian Warner  <warner@lothar.com>

	* twisted/test/test_internet.py (DelayedTestCase): add test